--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -16,7 +16,7 @@ import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { Button } from '@site/docs/components/button';
-import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
+import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 # ai
 
@@ -61,7 +61,7 @@ tps ai ./path/to/dir/[app-name]
 
 ```txt title="Creates"
 | - [app-name]/
-    | <files and directories llm creates>
+    | <files and directories AI creates>
 ```
 
 <Example>
@@ -158,7 +158,7 @@ shown below:
         "answers": {
             "token": "<token>",
             "model": "gpt-4o",
-            "llm": "openai"
+            "provider": "openai"
         }
     }
 }
