--- a/docs/docs/main/templates/ai.mdx
+++ b/docs/docs/main/templates/ai.mdx
@@ -8,7 +8,7 @@ keywords:
     - chatgpt
     - Large Language Models
     - code gen
-sidebar_label: ai (alpha)
+sidebar_label: ai
 ---
 
 import { TemplateOptions } from '@site/docs/components/templateOptions';
@@ -16,14 +16,13 @@ import { Example } from '@site/docs/components/example';
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 import { Button } from '@site/docs/components/button';
-import { Badge, BadgeList, VersionBadge } from '@site/docs/components/badges';
+import { BadgeList, VersionBadge } from '@site/docs/components/badges';
 
 # ai
 
 <BadgeList>
-    <Badge type="success">alpha</Badge>
-    <VersionBadge version="1.0.1" library="tps-ai" />
-    <VersionBadge version=">1.2.10" library="templates" />
+    <VersionBadge version="1.0.2" library="tps-ai" />
+    <VersionBadge version=">1.2.11" library="templates" />
 </BadgeList>
 
 Generate any codebase in any language, setup files for any library, or bring any
@@ -31,11 +30,8 @@ idea to life—all powered by AI.
 
 :::info
 
-At the moment, this template supports only OpenAI's models with
-[structured outputs](https://platform.openai.com/docs/guides/structured-outputs?lang=node.js&context=ex3#structured-outputs-vs-json-mode)
-support, which generally includes the GPT-4 Series. We plan to support more
-models and LLM providers in the future. Let us know what ones you want us to
-prioritize or how we can improve this template.
+Have ideas for new features or improvements? We'd love to hear from you! Please
+share your thoughts by submitting a feature request using the button below.
 
 <Button
     to="https://github.com/marcellino-ornelas/templates/discussions/categories/tps-ai-feature-requests-feedback"
@@ -60,12 +56,12 @@ tps ai [app-name]
 
 # or in a directory
 
-tps ai [app-name]
+tps ai ./path/to/dir/[app-name]
 ```
 
 ```txt title="Creates"
 | - [app-name]/
-    | <files and directories llm creates>
+    | <files and directories AI creates>
 ```
 
 <Example>
@@ -75,7 +71,7 @@ tps ai [app-name]
 <TabItem value="default">
 
 ```bash
-tps ai funny-gifs
+tps ai my-express-app
 ```
 
 </TabItem>
@@ -83,7 +79,7 @@ tps ai funny-gifs
 <TabItem value="long build path">
 
 ```bash
-tps ai projects/funny-gifs
+tps ai projects/my-express-app
 ```
 
 </TabItem>
@@ -119,27 +115,26 @@ npm i -g tps-ai
 
 <TemplateOptions template="tps-ai" type="js" />
 
-## Prerequisites
+## Configuration
 
-To use this template, you need to know which LLM provider you want to use, the
-model you'll use, and have a valid API token for the LLM provider. You can learn
-how to create an API key with your preferred LLM provider using one of the
-following:
+To use this template, you need to know which AI provider you want to use, the AI
+model, and have all the required credentials. Each AI provider requires
+different credentials, so refer to the [AI providers](#ai-providers) section to
+learn the correct configurations for that AI provider.
 
--   [openai](https://medium.com/@duncanrogoff/how-to-get-your-openai-api-key-in-2024-the-complete-guide-6b52d82c7362)
-
-When generating a new instance, you will be prompted for your token, LLM type,
-and model. However, we recommend using one of the following methods to answer
-these questions:
+When generating a new [instance](../generating-instance.mdx), you will be
+prompted for your token, AI provider, and model. However, we recommend using one
+of the following methods to answer these questions:
 
 -   **Global Config File (recommended)**
+-   **Environment Variables**
 -   **On the CLI**
 
 <Tabs>
 
 <TabItem value="Global Config (recommended)">
 
-You can define your preferred LLM, model, and API token in your
+You can define your preferred AI provider, model, and API token in your
 [global config file](../tpsrc.mdx#make-a-global-configuration-file) (e.g.,
 `~/.tps/.tpsrc`). We recommend adding this to your global config file because
 your local config file is more likely to be checked into your codebase,
@@ -154,8 +149,8 @@ haven't already:
 tps init -g
 ```
 
-Then add your preferred LLM, model, and API token to `~/.tps/.tpsrc`, as shown
-below:
+Then add your preferred AI provider, model, and API token to `~/.tps/.tpsrc`, as
+shown below:
 
 ```json title="~/.tps/.tpsrc"
 {
@@ -163,7 +158,7 @@ below:
         "answers": {
             "token": "<token>",
             "model": "gpt-4o",
-            "llm": "openai"
+            "provider": "openai"
         }
     }
 }
@@ -171,82 +166,278 @@ below:
 
 </TabItem>
 
+<TabItem value="Environment variables">
+
+Each AI provider supports a unique environment variables that you can use for
+their credentials. You can refer to the [AI providers](#ai-providers) section
+for the provider your using to see what environment variable you can use.
+However, the `model` and `provider` options will still need to be specified
+using one of our other
+[methods](../generating-instance#using-a-templates-options).
+
+Templates does not load environment variables by default, so you will need to
+[set these in your shell](https://chlee.co/how-to-setup-environment-variables-for-windows-mac-and-linux/)
+before running the command.
+
+:::tip
+
+Templates plans to support loading environment variables automatically from a
+`.env` file in a future release.
+
+:::
+
+</TabItem>
+
 <TabItem value="CLI">
 
-You can pass in your preferred LLM, model, and API token when generating your
-new instance, as shown below:
+You can pass in your preferred AI provider, model, and API token when generating
+your new instance, as shown below:
 
 ```bash
 tps ai --llm openai --model gpt-4o --token <token>
 ```
 
+However, this is not recommended because you need to supply these values every
+time you run the CLI command
+
 </TabItem>
 
 </Tabs>
+
+## AI Providers
+
+Templates supports multiple AI providers, each with its own unique setup. Below
+are the supported AI providers and how to configure them.
+
+Templates uses Vercel's [AI SDK](https://sdk.vercel.ai/) to interact with the AI
+providers. Currently, we only support a subset of the
+[providers](https://sdk.vercel.ai/providers/ai-sdk-providers) that the AI SDK
+supports. The `model` you choose needs to support object generation in order to
+use it with this template. If you would like to see a provider that we don't
+support, drop us a
+[request](https://github.com/marcellino-ornelas/templates/discussions/categories/tps-ai-feature-requests-feedback).
+
+:::caution
+
+Templates does not support passing options to the AI models at the moment.
+However, this is a feature that we are looking to support in the future.
+
+:::
+
+### OpenAI
+
+**Supported models:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/openai#model-capabilities
+
+**Environment variable:** `OPENAI_API_KEY`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/openai
+
+**API key Guide:**
+https://medium.com/@duncanrogoff/how-to-get-your-openai-api-key-in-2024-the-complete-guide-6b52d82c7362
+
+To use OpenAI, you will need to have an API key. You can get one by following
+the
+[OpenAI API key guide](https://medium.com/@duncanrogoff/how-to-get-your-openai-api-key-in-2024-the-complete-guide-6b52d82c7362).
+
+Once you have your API key, you can [configure](#configuration) it using the
+`token` option. This provider also supports specifying your API `token` using
+the `OPENAI_API_KEY` environment variable.
+
+### Anthropic (alpha)
+
+**Supported models:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/anthropic#model-capabilities
+
+**Environment variable:** `ANTHROPIC_API_KEY`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/anthropic
+
+**API key docs:**
+https://docs.anthropic.com/en/api/getting-started#accessing-the-api
+
+To use Anthropic, you will need to have an API key. You can get one by following
+the
+[Anthropic API key docs](https://docs.anthropic.com/en/api/getting-started#accessing-the-api).
+
+Once you have your API key, you can [configure](#configuration) it using the
+`token` option. This provider also supports specifying your API `token` using
+the `ANTHROPIC_API_KEY` environment variable.
+
+### Amazon Bedrock (alpha)
+
+**Supported models:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/amazon-bedrock#model-capabilities
+
+**Environment variables:** `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`,
+`AWS_REGION`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/amazon-bedrock
+
+**API key docs:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/amazon-bedrock#authentication
+
+:::danger
+
+This provider requires the `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`,
+`AWS_REGION` environment variables.
+
+:::
+
+:::caution
+
+The `token` and `baseUrl` options are not supported by this provider.
+
+:::
+
+To use Amazon Bedrock you will need an access key, secret access key, and the
+aws region. You can get these by following the
+[Amazon Bedrock authentication docs](https://sdk.vercel.ai/providers/ai-sdk-providers/amazon-bedrock#authentication).
+
+Once you have your credentials, you can [configure](#configuration) them using
+environment variables. You can provided these environment variables by following
+the environment variables tab in [configuration](#configuration) section. You
+need to provide all the folllowing environment variables `AWS_ACCESS_KEY_ID`,
+`AWS_SECRET_ACCESS_KEY`, `AWS_REGION` for this provider to work.
+
+### Google (alpha)
+
+**Supported models:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/google-generative-ai#model-capabilities
+
+**Environment variable:** `GOOGLE_GENERATIVE_AI_API_KEY`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/google-generative-ai
+
+**API key docs:** https://ai.google.dev/gemini-api/docs/api-key
+
+To use Google, you will need to have an API key. You can get one by following
+the [Google API key docs](https://ai.google.dev/gemini-api/docs/api-key).
+
+Once you have your API key, you can [configure](#configuration) it using the
+`token` option. This provider also supports specifying your API `token` using
+the `GOOGLE_GENERATIVE_AI_API_KEY` environment variable.
+
+### Deepseek (alpha)
+
+**Supported models:**
+https://sdk.vercel.ai/providers/ai-sdk-providers/deepseek#model-capabilities
+
+**Env variable:** `DEEPSEEK_API_KEY`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/deepseek
+
+**API key docs:** https://api-docs.deepseek.com/
+
+To use Deepseek, you will need to have an API key. You can get one by following
+the [Deepseek API key docs](https://api-docs.deepseek.com/).
+
+Once you have your API key, you can [configure](#configuration) it using the
+`token` option. This provider also supports specifying your API `token` using
+the `DEEPSEEK_API_KEY` environment variable.
+
+### Azure (alpha)
+
+**Env variable:** `AZURE_API_KEY`, `AZURE_RESOURCE_NAME`
+
+**Docs:** https://sdk.vercel.ai/providers/ai-sdk-providers/azure
+
+**API key docs:**
+https://docs.mindmac.app/how-to.../add-api-key/create-azure-openai-api-key
+
+:::danger
+
+This providers requires the `AZURE_RESOURCE_NAME` environment variable.
+
+:::
+
+:::tip
+
+Use the `model` option to specify azures deployment name.
+
+:::
+
+To use Azure, you will need to have an API key, resource name, and deployment
+name. You can get theses by following the
+[Azure API key docs](https://docs.mindmac.app/how-to.../add-api-key/create-azure-openai-api-key).
+
+Once you have your API key, you can [configure](#configuration) it using the
+`token` option. This provider also supports specifying your API `token` using
+the `AZURE_API_KEY` environment variable.
+
+To use this provider, you also need to supply a azure resource name via the
+`AZURE_RESOURCE_NAME` environment variable. You can provided these environment
+variables by following the environment variables tab in
+[configuration](#configuration) section.
 
 ## Examples
 
 ### How to use
 
-Use our AI template to generate anything your mind desires. If you haven't
-already, please follow our [prerequisites](#prerequisites) before using this
-template.
+You can use our AI template to generate anything your mind desires. If you
+haven't already, please [configure](#configuration) your AI provider before
+using this template.
 
-Once configured, you're ready to use this template. This template can be used in
-two ways:
+Once configured, you're ready to go. This template can be used in two ways:
 
 -   With a build path
 -   Without a build path
 
 :::tip Tip: What is a Build Path?
 
-The build path is the name and location you provide for your new template.
+The build path is the name and location you provide for your new instance.
 Templates uses it to create a directory and render its contents there.
 
 _example:_
 
 ```bash
 tps ai food-app
-      # ^^^^^^^
-      # build path
+    #  |_______|
+    #    ^ Build path and instance name
 
 tps ai ./project/food-app
-      # ^^^^^^^^^^^^^^^^
-      # long build path
+    #  |________| |______|
+    #   ^ location    ^ instance name
+    #  |_________________|
+    #      ^ build path
 ```
+
+You can learn more about build paths in the
+[build path docs](../generating-instance.mdx#what-is-a-build-path).
 
 :::
 
 #### Build path
 
-When generating a new instance with a build path, any files or folders the LLM
-creates will be placed into your build path.
+When generating a new instance with a build path, Template's will create a new
+directory based on this build path and put any files or folders the LLM creates
+into this directory.
 
 _Example:_
 
-If you want to build an Express app for your new `food-app`, you can run the
-following command:
+If you want to build an Express app for your new food app idea named `food-app`,
+you can run the following command:
 
 ```bash
 tps ai food-app
 ? What would you like to build? Create the contents of an Express app. I want all the bells and whistles. It should have a MongoDB connection as well.
 ```
 
-This will generate a `food-app` directory in your `CWD` and place all files and
-directories the LLM creates inside it.
+This will generate a `food-app` directory in your current working directory and
+place all files and directories the AI creates inside it.
 
 ```txt title="Creates"
-| - <food-app>/
+| - food-app/
     | - <files and directories created by LLM...>
 ```
 
 #### No Build Path
 
-When generating a new instance with no build path, all files or folders the LLM
-creates will be placed into your `CWD`. This is useful if you want content to be
-generated inside your current working directory or when you want the LLM to
-generate a directory for you. However, **you need to explicitly tell the LLM to
-do this.**
+When generating a new instance with no build path, all files or folders the AI
+creates will be placed into your current working directory. This is useful if
+you want content to be generated inside your current working directory or when
+you want the AI to generate a directory for you. However, **you need to
+explicitly tell the AI to do this.**
 
 _Example:_
 
@@ -259,7 +450,7 @@ tps ai
 ```
 
 This will generate a `__tests__` directory and a `jest.config.js` file inside
-your `CWD`.
+your current working directory.
 
 ```txt title="Creates"
 | - <cwd>/
@@ -270,7 +461,7 @@ your `CWD`.
 
 :::tip
 
-The more specific you are with the LLM, the better outcome you will get.
+The more specific you are with the AI, the better outcome you will get.
 
 For example:
 
@@ -278,12 +469,45 @@ For example:
 -   **Specific:** "Create a RESTful API using Express with routes for user
     authentication and a MongoDB connection."
 
-Providing clear details helps the LLM understand your exact needs and deliver
+Providing clear details helps the AI understand your exact needs and deliver
 more accurate results.
 
 :::
 
-### Inspiration
+### Base Url
+
+The `baseUrl` option lets you change the base url that this template sends the
+request to. This is useful when you want to interact with different environments
+or your custom AI instance. Most AI providers supports this base URL option but
+always refer to the [provider's docs](#ai-providers) to make sure.
+
+<Tabs>
+
+<TabItem value="Config">
+
+```json title=".tps/.tpsrc"
+{
+    "ai": {
+        "answers": {
+            "baseUrl": "https://my-custom-ai.com/api"
+        }
+    }
+}
+```
+
+</TabItem>
+
+<TabItem value="CLI">
+
+```bash
+tps ai --baseUrl https://my-custom-ai.com/api
+```
+
+</TabItem>
+
+</Tabs>
+
+## Inspiration
 
 Need some inspiration on what you can do? Here are some examples:
 
