default value support

--- a/docs/docs/main/generating-instance.mdx
+++ b/docs/docs/main/generating-instance.mdx
@@ -285,7 +285,7 @@ all non hidden options then generate your instance.
 
 ```bash
 tps react-component Nav
-? Would you like to use typescript (y/N)
+? Would you like to use typescript? (y/N)
 ```
 
 If you press `Enter` without typing anything, Templates will use the option's
